<resources>
    <string name="app_name">Sello Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_payment">Thanh toán</string>
    <string name="address">Thông tin giao hàng</string>
    <string name="contact">Liên hệ</string>
    <string name="full_name">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="tinh_huyen_xa">Tỉnh/Thành, Quận/Huyện, Phường/Xã</string>
    <string name="home_number">Tên đường, số nhà</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_delivery">Thanh toán khi nhận hàng</string>
    <string name="payment_atm">Thẻ ATM</string>
    <string name="total">Tổng thanh toán:</string>
    <string name="total_default">0</string>
    <string name="payment">Mua hàng</string>
    <string name="register">ĐĂNG KÍ</string>
    <string name="require_information">Thông tin bắt buộc</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="additional_information">Chi tiết sản phẩm</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="or">Hoặc</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="logout">Đăng xuất</string>
    <string name="productName">Tên sản phẩm</string>
    <string name="price">199000</string>
    <string name="currency">₫</string>
    <string name="default_quantity">1</string>
    <string name="delete_cart">Xóa</string>
    <string name="cart">Giỏ hàng</string>
    <string name="select_all">Tất cả</string>
    <string name="total_money">Tổng tiền: </string>
    <string name="buy_item">Mua hàng</string>
    <string name="product_rate">Đánh giá sản phẩm</string>
    <string name="reviews_product">Các đánh giá</string>
    <string name="other_product">Các sản phẩm khác</string>
    <string name="welcome">sello</string>
    <string name="top_sale">SẢN PHẨM BÁN CHẠY</string>
    <string name="category">BỘ SƯU TẬP</string>
    <string name="quantity">Số lượng: </string>
    <string name="et_password">Mật khẩu</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="tv_login">ĐĂNG NHẬP</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="btn_register">Đăng kí</string>
    <string name="questregister">Chưa có tài khoản?</string>
    <string name="tv_register">Đăng kí</string>
    <string name="btnlogin">ĐĂNG NHẬP</string>
    <string name="btn_log_out">Đăng Xuất</string>
    <string name="btn_del">Xóa</string>
    <string name="btn_update">Cập Nhật</string>
    <string name="tv_email">Email</string>
</resources>