<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bb"
    tools:context=".fragment.PersonDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/information"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="12"
            android:hint="@string/tv_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_personal_information" />

        <EditText
            android:id="@+id/tv_fullname"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="12"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />


        <EditText
            android:id="@+id/tv_address"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_address"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_fullname"
            app:layout_constraintStart_toStartOf="@+id/tv_fullname"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullname" />

        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/tv_address"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@+id/tv_address">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_border"
            android:text="@string/btn_update"
            app:layout_constraintEnd_toEndOf="@id/tv_address"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/radio_gender" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:text="@string/btn_del"
            app:layout_constraintEnd_toEndOf="@id/tv_address"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@+id/btn_update" />

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:text="@string/btn_log_out"
            app:layout_constraintEnd_toEndOf="@id/tv_address"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>