<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailFragment"
    android:background="@drawable/bb">

    <ScrollView
        android:id="@+id/detail_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#03A9F4"
                android:drawableStart="@mipmap/ic_sello"
                android:text="@string/productName"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="5dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imv_product"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_below="@id/tv_detail_title"
                android:contentDescription="@string/additional_information" />


            <TextView
                android:id="@+id/tv_name"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imv_product"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/productName"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_name"
                android:text="@string/price"
                android:textColor="#F44336"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_price"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/additional_information"
                android:textSize="20sp" />

            <ScrollView
                android:id="@+id/scr_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="500dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/additional_information"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </ScrollView>

            <View
                android:id="@+id/v2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/scr_detail"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_rate"
                android:layout_below="@id/v2"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/tv_rate"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews_product"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </ScrollView>

            <View
                android:id="@+id/v3"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="920dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/v3"
                android:text="@string/other_product"
                android:textSize="20sp" />

            <androidx.viewpager.widget.ViewPager
                android:layout_below="@id/tv_other"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="10dp" />

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu_detail"/>

</androidx.constraintlayout.widget.ConstraintLayout>